force-app/main/default/objects/GRID_VCA_Instant_Message__c/GRID_VCA_Instant_Message__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community :</description>
    <label>Portal Instant Message</label>
    <nameField>
        <label>Instant Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Instant Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>