force-app/main/default/objects/GRID_VCA_Instant_Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>