force-app/main/default/objects/GRID_VCA_Instant_Message__c/fields/Permission_Set_Groups__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Groups__c</fullName>
    <label>Permission Set Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compute DGX Portal Full</fullName>
            </value>
            <value>
                <fullName>Compute Portal Full</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>NVEP</fullName>
            </value>
            <value>
                <fullName>Portal Lite</fullName>
            </value>
            <value>
                <fullName>SP Compute DGX Elite</fullName>
            </value>
            <value>
                <fullName>SP Compute DGX Preferred</fullName>
            </value>
            <value>
                <fullName>SP Compute Elite</fullName>
            </value>
            <value>
                <fullName>SP Compute Preferred</fullName>
            </value>
            <value>
                <fullName>SP Virtualization Elite</fullName>
            </value>
            <value>
                <fullName>SP Virtualization Preferred</fullName>
            </value>
            <value>
                <fullName>SP Visualization Elite</fullName>
            </value>
            <value>
                <fullName>SP Visualization Preferred</fullName>
            </value>
            <value>
                <fullName>Virtualization Portal Full</fullName>
            </value>
            <value>
                <fullName>Visualization Portal Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>