force-app/main/default/objects/GRID_VCA_Instant_Message__c/fields/Portal_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Portal_Permission_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Permission Set</label>
    <referenceTo>Portal_Permission_Sets__c</referenceTo>
    <relationshipLabel>Portal Instant Messages</relationshipLabel>
    <relationshipName>Portal_Instant_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>