force-app/main/default/objects/GRID_VCA_Instant_Message__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>This is a url value for each instant message on portal.</description>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>