force-app/main/default/objects/GRID_VCA_Instant_Message__c/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
    <language>en_US</language>
</ListView>